# hummingbird

./: .gitignore  .npmignore  .travis.yml  CMakeLists.txt  CNAME  Cargo.toml  Gulpfile.js  Jakefile  LICENSE  Makefile  Manual.md  README.md  _config.yml  _tags  dscanner.ini  dub.sdl  highlight.css  index.html  jake  main.ml  manual.html  new-grammar.js  notes.js  package.json  rust-toolchain  specification.html  styles.css  test-grammar.js  test.js  try.html  try.js
.github/workflows/: rust.yml
_includes/: footer.html  metrics.html  navigation.html
_layouts/: default.html
doc/: Manual.md  Specification.md  specification.md
examples/: browser.html  classes.hb  extending-classes.hb  fibonacci.hb  for.hb  mergeSort.hb  multi.hb  requests.hb  server.hb  simple.hb  simple.js  stdlib.hb  trivial.hb
examples/imports_and_exports/: a.hb  b.hb
examples/modules/: a.hb  b.hb
ext/: hummingbird.h  std.c
ext/std/: io.hb
lib/: ast.js  browser.js  command-native.js  command.js  compiler.js  errors.js  grammar.peg  grammar.pegjs  grammar2.pegjs  parser-extension.js  parser.js  parser.peg  spec-parser.js  types.js  typesystem.js  util.js
lib/targets/: javascript.js  llvm.js
lib/typesystem/: bootstrap.js  scope.js  typeerror.js
scratch/: benchmark-parsers.js  test-multi.js
script/: build  env-mac  test  test-all  test-end-to-end  test-unit
share/: gen-spec.js  spec-runner.js
spec/e2e_ast/: end_to_end_spec.rb
spec/end_to_end/: end_to_end_spec.rb
spec/integration/: integration_spec.rb
src/: CMakeLists.txt  Lexer.cpp  Lexer.h  Lexer.l  Parser.cpp  Parser.h  ast.js  ast.ml  ast.ts  command-native.js  command.js  compiler.js  errors.js  errors.ts  grammar.jison  grammar.pegjs  lexer.ml  lexer.mli  main.cpp  main.d  main.rs  parse_ast.rs  parser-extension.js  parser.js  parser.ml  types.js  types.ts  typesystem.js  typesystem.ts  util.js  vm.rs
src-old/: parse_ast.rs
src-old/compiler/: opaque.rs  vecs_equal.rs
src-old/frontend/: mod.rs
src-old/parser/: parser.rs
src-old/type_ast/: mod.rs  nodes.rs  printer.rs  translate.rs  typ.rs
src/Parser/: CMakeLists.txt  Driver.cpp  Driver.h  Lexer.cpp  Lexer.h  Lexer.l  Nodes.cpp  Nodes.h  Parser.cpp  Parser.h  Parser.yy  ast.d  grammar.d  location.hh  parser.d
src/ast/: ast.d  compiler.d  compiler.rs  mod.rs  nodes.rs  printer.rs
src/ast_to_ir/: mod.rs
src/bb/: builder.d  instructions.d
src/compiler/: mod.rs  opaque.rs  path_to_name.rs
src/frontend/: mod.rs
test/: helper.js  test-parser.js  test-system.js  test-types.js  test-typesystem.js  test.js
(+120 files in other folders)
