[package]
name = "hummingbird"
version = "0.1.0"
authors = ["Dirk Gadsden <dirk@esherido.com>"]
edition = "2018"

[dependencies]
codespan = "0.7.0"
codespan-reporting = "0.7.0"
lazy_static = "1.4.0"
paste = "0.1.7"
termcolor = "1.1.0"
regex = "1.3.4"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "llvm8-0" }
