[package]
name = "hummingbird"
version = "0.1.0"
authors = ["Dirk Gadsden <dirk@esherido.com>"]
edition = "2021"

[dependencies]
# codespan = "0.7.0"
# codespan-reporting = "0.7.0"
# lazy_static = "1.4.0"
# paste = "0.1.7"
# termcolor = "1.1.0"
# regex = "1.3.4"
# inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "llvm8-0" }
inkwell = { version = "0.1.1", features = ["llvm15-0"] }
llvm-sys = "150.0.3"
tokio = { version = "1.27.0", features = ["fs", "io-util", "macros", "parking_lot", "rt", "rt-multi-thread", "sync"] }
parking_lot = "0.12.1"
sha2 = "0.10.6"
async-recursion = "1.0.4"
unicode-ident = "1.0.8"
